# Turret

./: .gitignore  README.md
Turret/: cmake_install.cmake  setup.sh
Turret/src/: CMakeLists.txt  aruco_detect.cpp  aruco_track.cpp  auto_tracker.cpp  camera.cpp  camera.h  color_track.cpp  manual_keyboard.cpp  servo.cpp  servo.h  test.cpp
model/: base_plate.stp  camera_mount.stp  encoder_wheel_2mm.stp  mount.stp  mount_spacer.stp  sensor_bracket.stp  shaft_adapter_1.stp  shaft_adapter_2.stp  top_bracket.stp
